# py-email-pax-confirmed

./: cloudbuild.yaml  func_test_main.py  funct_test_rst+mail.py  funct_test_rst.py  main.py  pyproject.toml  rst.py  test_main.py
res/: confirmed_pax_fr.rst  confirmed_pax_title_fr.txt
templates/: confirmed_pax_fr.rst  confirmed_pax_title_fr.txt
